# jaxmax

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  coverage.xml  index.html  lowering_rules.html  mkdocs.yml  objects.inv  pseudorandomness.html  pygments.css  pyproject.toml
.github/workflows/: ci.yml
css/: custom.css  mkdocstrings.css
docs/: index.md  lowering_rules.md  pseudorandomness.md
docs/css/: custom.css  mkdocstrings.css
docs/fonts/: univers.css
examples/: README.md  basic.py  custom_primitives.py  jit.py  prng.py  readme.py  readme_example.py  scratch.mojo  simple_build.py  timing_load_graph.py  transformations.py
search/: search_index.js  search_index.json
src/jaxmax/: __init__.py  compiler.py  jit.py  rules.py
src/jaxmax/kernels/: __init__.mojo  random_split.mojo
src/juju/: __init__.py  compiler.py  jit.py  primitive.py  prng.py  rules.py
src/juju/kernels/: __init__.mojo  acos.mojo  add_one.mojo  iota.mojo  mandelbrot.mojo  philox.mojo  random_split.mojo  reduce_sum.mojo
tests/: test_compiler.py  test_primitive.py
