[project]
authors = [{ name = "McCoy Reynolds Becker", email = "mccoyb@mit.edu" }]
description = "Lowering JAX computations to MAX graphs."
name = "juju"
requires-python = ">=3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
juju = { path = ".", editable = true }
beartype = ">=0.19.0,<0.20"
jax = ">=0.4.35,<0.5"
pytest = ">=8.3.4,<9"

[tool.pixi.tasks]
kernels = "mojo package ./src/juju/kernels -o kernels.mojopkg"
format = "ruff format . && ruff check --fix"
test = "magic run kernels && pytest"

[tool.pixi.dependencies]
max = ">=25.1.0.dev2025011705,<26"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
preview = true
extend-select = ["I", "RUF"]
select = ["E4", "E7", "E9", "F"]
# F403 disables errors from `*` imports, which we currently use heavily.
ignore = ["F403", "F405", "F811", "E402", "RUF009", "RUF003"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = false
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"
